Imagenes convertidas a WEBP

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col">
                     <div class="card reveal">
-                        <img src="/img/nivus.jpeg" class="card-img-top card-image" alt="Fotografia del Modelo Nivus 2024">
+                        <img src="/img/nivus.webp" class="card-img-top card-image" alt="Fotografia del Modelo Nivus 2024">
                         <div class="card-body">
                             <h4 class="card-title fs-1 fw-bold">Nivus 2024</h5>
                             <p class="card-text fs-3">El SUVW que manifesta su potencia y con un diseño que complementa tu personalidad y su tecnología que eleva cada aspecto de tu experiencia.
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col">
                     <div class="card reveal">
-                        <img src="/img/jetta.jpeg" class="card-img-top card-image" alt="Fotografia del Modelo Jetta 2024">
+                        <img src="/img/jetta.webp" class="card-img-top card-image" alt="Fotografia del Modelo Jetta 2024">
                         <div class="card-body">
                             <h4 class="card-title fs-1 fw-bold">Jetta 2024</h5>
                             <p class="card-text fs-3">Disfrútalo todos los días con innovación, diseño único y un increíble dinamismo para que dejes en claro que eres cada vez mejor.</p>
@@ -196,19 +196,19 @@
                 <div class="col-12 col-lg-9">
                     <div class="galeria row g-3 p-5">
                         <div class="col-12 col-lg-8 overflow-hidden">
-                            <img class="img-fluid" src="img/galeria01.jpg" alt="Imagen galeria 01">
+                            <img class="img-fluid" src="img/galeria01.webp" alt="Imagen galeria 01">
                         </div>
                         <div class="col-12 col-lg-4 overflow-hidden">
-                            <img class="img-fluid" src="img/galeria02.jpg" alt="Imagen galeria 02">
+                            <img class="img-fluid" src="img/galeria02.webp" alt="Imagen galeria 02">
                         </div>
                         <div class="col-12 col-lg-4 overflow-hidden">
-                            <img class="img-fluid" src="img/galeria03.jpg" alt="Imagen galeria 03">
+                            <img class="img-fluid" src="img/galeria03.webp" alt="Imagen galeria 03">
                         </div>
                         <div class="col-12 col-lg-4 overflow-hidden">
-                            <img class="img-fluid" src="img/galeria04.jpg" alt="Imagen galeria 04">
+                            <img class="img-fluid" src="img/galeria04.webp" alt="Imagen galeria 04">
                         </div>
                         <div class="col-12 col-lg-4 overflow-hidden">
-                            <img class="img-fluid" src="img/galeria05.jpg" alt="Imagen galeria 05">
+                            <img class="img-fluid" src="img/galeria05.webp" alt="Imagen galeria 05">
                         </div>
                     </div>
                 </div>
