--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.webp" type="image/x-icon">
 
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
