Imagenes WEBP reestablecidas

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col">
                     <div class="card reveal">
-                        <img src="/img/nivus.webp" class="card-img-top card-image" alt="Fotografia del Modelo Nivus 2024">
+                        <img src="/img/nivus.jpg" class="card-img-top card-image" alt="Fotografia del Modelo Nivus 2024">
                         <div class="card-body">
                             <h4 class="card-title fs-1 fw-bold">Nivus 2024</h5>
                             <p class="card-text fs-3">El SUVW que manifesta su potencia y con un diseño que complementa tu personalidad y su tecnología que eleva cada aspecto de tu experiencia.
